--- a/src/main/resources/templates/Fragments/Menus.html
+++ b/src/main/resources/templates/Fragments/Menus.html
@@ -6,66 +6,66 @@
 </head>
 <body>
 
-    <nav th:fragment="top-menu" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" th:href="@{/}">Biblioteka</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li th:if="${currentUser.login != null}"> <a th:href="@{/newBook}" ><i class="glyphicon glyphicon glyphicon-book"></i> Dodaj ksiażkę </a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i><span th:if="${currentUser.login!=null}" th:text="' ' + ${currentUser.login}"></span></span><b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li th:if="${currentUser.login!=null}"> <a th:href="@{/profile}" ><i class="glyphicon glyphicon-user"></i> Twój profil  </a>
-                            </li>
-                            <li th:if="${currentUser.login!=null}"> <a th:href="@{/passwordChange}" ><i class="glyphicon glyphicon-user"></i> Zmień hasło  </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li th:if="${currentUser.login == null}"> <a th:href="@{/login}" ><i class="glyphicon glyphicon-log-in"></i> Logowanie </a>
-                            </li>
-                            <li th:if="${currentUser.login==null}"> <a th:href="@{/register}"  ><i class="glyphicon glyphicon-plus-sign"></i> Rejestracja </a>
-                            </li>
-                            <li th:if="${currentUser.login != null}"> <a th:href="@{/logout}" ><i class="glyphicon glyphicon-log-out"></i> Wyloguj </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
-    </nav>
+<nav th:fragment="top-menu" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" th:href="@{/}">Biblioteka</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li th:if="${currentUser.login != null}"> <a th:href="@{/newBook}" ><i class="glyphicon glyphicon glyphicon-book"></i> Dodaj ksiażkę </a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i><span th:if="${currentUser.login!=null}" th:text="' ' + ${currentUser.login}"></span></span><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li th:if="${currentUser.login!=null}"> <a th:href="@{/profile}" ><i class="glyphicon glyphicon-user"></i> Twój profil  </a>
+                        </li>
+                        <li th:if="${currentUser.login!=null}"> <a th:href="@{/passwordChange}" ><i class="glyphicon glyphicon-user"></i> Zmień hasło  </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li th:if="${currentUser.login == null}"> <a th:href="@{/login}" ><i class="glyphicon glyphicon-log-in"></i> Logowanie </a>
+                        </li>
+                        <li th:if="${currentUser.login==null}"> <a th:href="@{/register}"  ><i class="glyphicon glyphicon-plus-sign"></i> Rejestracja </a>
+                        </li>
+                        <li th:if="${currentUser.login != null}"> <a th:href="@{/logout}" ><i class="glyphicon glyphicon-log-out"></i> Wyloguj </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container -->
+</nav>
 
-    <div th:fragment="side-menu">
-        <div class="col-md-3 sidebar">
-            <div>
+<div th:fragment="side-menu">
+    <div class="col-md-3 sidebar">
+        <div>
             <ul class="nav nav-tabs nav-stacked text-center">
                 <li><h2>KATEGORIE: </h2> </li>
                 <hr/>
                 <th:block th:each="category : ${categories}">
-                    <li><a th:text="${category.categoryName}" th:href="@{'/catalogue/' + ${category.categoryId} + '/0'}"></a>
+                    <li><a th:text="${category.categoryName}" th:href="@{'/catalogue/' + ${category.categoryId}}"></a>
                     </li>
                 </th:block>
 
                 <hr/>
 
                 <div>
-                    <form class="form-inline" id="searchForm" th:action="@{'/search/0'}" method="post">
-                    <h4>Wyszukiwarka:</h4>
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="words" name="words">
-                        <input type="hidden" name="page" value="0">
-                        <span class="input-group-btn">
+                    <form class="form-inline" id="searchForm" th:action="@{'/search/'}" method="post">
+                        <h4>Wyszukiwarka:</h4>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="words" name="words">
+                            <input type="hidden" name="page" value="0">
+                            <span class="input-group-btn">
                             <button form="searchForm" value="Submit" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
                             </button>
                         </span>
-                    </div>
+                        </div>
                     </form>
                 </div>
 
@@ -74,7 +74,7 @@
                 <li><img class="img-responsive" th:src="@{/images/book.png}"/></li>
             </ul>
 
-            </div>
+        </div>
 
 
 
@@ -84,6 +84,6 @@
     </div>
 
 
-    </div>
+</div>
 </body>
 </html>
