--- a/src/main/resources/templates/blank.html
+++ b/src/main/resources/templates/blank.html
@@ -22,7 +22,7 @@
 <div class="container col-md-9">
     <div class="row">
         <div class="col-md-9">
-            <h1 class="page-header">Blank</h1>
+            <h1 class="page-header">Biblioteka</h1>
         </div>
     </div><!-- /.row -->
 
