--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -43,10 +43,10 @@
                     </div>
             </div>
             <div class="jumbotron text-center">
-                <form role="form" class="form form-inline" enctype="multipart/form-data" th:action="@{'/delete/' + ${book.id}}" th:method="post">
+                <form role="form" class="form form-inline" enctype="multipart/form-data" th:action="@{'/book/' + ${book.id} + '/delete'}" th:method="post">
                     Czy chcesz usunąć powyższą książkę?
                     <input type="submit" class="btn btn-danger" value="TAK">
-                    <a th:href="@{/}"><button type="button" class="btn btn-success " >NIE</button></a>
+                    <a th:href="@{'/book/' + ${book.id}}"><button type="button" class="btn btn-success " >NIE</button></a>
                 </form>
 
             </div>
