--- a/src/main/resources/templates/passwordChange.html
+++ b/src/main/resources/templates/passwordChange.html
@@ -29,13 +29,15 @@
     <div class="row">
         <div class="col-md-9">
             <div class="panel-body">
-                <div class="jumbotron text-center" th:if="${changeOK==true}"> Hasło zmienione! </div>
+                <div class="jumbotron text-center" th:if="${result=='changed'}"> Hasło zmienione! </div>
                 <h3 th:text = "${currentUser.login}"></h3>
                 <form role="form" enctype="multipart/form-data" th:action="@{/passwordChange}" th:method="post" th:object="${passwordChangeForm}">
-                    <div th:class="'form group'">
+                    <div th:class="${#fields.hasErrors('oldPassword')?'form-group has-error':'form group'}">
                         <label for="oldPassword2" class=control-label > Stare hasło: </label>
                         <input class="form-control" placeholder="old password" th:field="*{oldPassword}" id="oldPassword2" name="oldPassword" type="password" value="">
-                        <small> <p class="text-danger text-right" ></p></small>
+                        <small> <p class="text-danger text-right" th:if="${result=='badPassword'}"> Nieprawidłowe hasło!</p></small>
+                        <small> <p class="text-danger text-right" th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}"></p></small>
+
                     </div>
 
                     <div th:class="${#fields.hasErrors('password')?'form-group has-error':'form group'}">
@@ -43,10 +45,10 @@
                         <input class="form-control"  th:field="*{password}" placeholder="password" id="password" name="password" type="password" value="">
                         <small> <p class="text-danger text-right" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p></small>
                     </div>
-                    <div th:class="${passwordsMatch==false?'form-group has-error':'form group'}">
+                    <div th:class="${result=='passwordsError'?'form-group has-error':'form group'}">
                         <label for="password2" class=control-label > Powtórz nowe hasło: </label>
                         <input class="form-control"  th:field="*{password2}" placeholder="password2" id="password2" name="password2" type="password" value="">
-                        <small> <p class="text-danger text-right" th:if="${passwordsMatch==false}"> Hasła są różne</p></small>
+                        <small> <p class="text-danger text-right" th:if="${result=='passwordsError'}"> Hasła są różne</p></small>
                     </div>
                     <br/>
                     <div><input type="submit" class="btn btn-lg btn-success btn-block" value="Zmień hasło"></div>
