--- a/src/main/resources/templates/Fragments/Menus.html
+++ b/src/main/resources/templates/Fragments/Menus.html
@@ -20,7 +20,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li th:if="${currentUser.login != null}"> <a th:href="@{/newBook}" ><i class="glyphicon glyphicon glyphicon-book"></i> Dodaj ksiażkę </a></li>
+                <li th:if="${currentUser.login != null}"> <a th:href="@{book/add/}" ><i class="glyphicon glyphicon glyphicon-book"></i> Dodaj ksiażkę </a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i><span th:if="${currentUser.login!=null}" th:text="' ' + ${currentUser.login}"></span></span><b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -49,22 +49,21 @@
                 <li><h2>KATEGORIE: </h2> </li>
                 <hr/>
                 <th:block th:each="category : ${categories}">
-                    <li><a th:text="${category.categoryName}" th:href="@{'/catalogue/' + ${category.categoryId}}"></a>
+                    <li><a th:text="${category.categoryName}" th:href="@{'/books/' + ${category.categoryId} + '/0'}"></a>
                     </li>
                 </th:block>
 
                 <hr/>
 
                 <div>
-                    <form class="form-inline" id="searchForm" th:action="@{'/search/'}" method="post">
+                    <form class="form-inline" id="searchForm" th:action="@{'/search'}" method="get">
                         <h4>Wyszukiwarka:</h4>
                         <div class="input-group">
-                            <input type="text" class="form-control" id="words" name="words">
-                            <input type="hidden" name="page" value="0">
+                            <input type="text" class="form-control" id="phrase" name="phrase">
                             <span class="input-group-btn">
                             <button form="searchForm" value="Submit" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
                             </button>
-                        </span>
+                             </span>
                         </div>
                     </form>
                 </div>
