--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -9,10 +9,10 @@
     <title>Add book</title>
 
     <!-- Bootstrap core CSS -->
-    <link th:href="@{css/bootstrap.css}" rel="stylesheet">
+    <link th:href="@{/css/bootstrap.css}" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link th:href="@{css/modern-business.css}" rel="stylesheet">
+    <link th:href="@{/css/modern-business.css}" rel="stylesheet">
 </head>
 <body>
 <nav th:replace="Fragments/Menus :: top-menu"></nav>
@@ -29,8 +29,8 @@
     <div class="row">
         <div class="col-md-9">
             <div class="panel-body">
-                <div class="jumbotron text-center" th:if="${addingOK==true}"> Książka została dodana! </div>
-                <form th:if="${addingOK!=true}" role="form" enctype="multipart/form-data" th:action="@{/newBook}" th:method="post" th:object="${newBookForm}">
+                <div class="jumbotron text-center" th:if="${success==true}"> Książka została dodana! </div>
+                <form th:if="${success!=true}" role="form" enctype="multipart/form-data" action="#" th:method="post" th:object="${newBookForm}">
                     <fieldset>
                         <div th:class="${#fields.hasErrors('title')?'form-group has-error':'form group'}">
                             <label for="title" class=control-label > Tytuł: </label>
