--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -46,7 +46,7 @@
                             <label for="login" class=control-label > Login: </label>
                             <input class="form-control"  th:field="*{login}" placeholder="login" id="login" name="login" type="text" value="">
                             <small> <p class="text-danger text-right" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></p>
-                                <p class="text-danger text-right" th:if="${loginExists==true}" th:text="'Ten login istnieje już w bazie!'"></p></small>
+                                <p class="text-danger text-right" th:if="${registerError=='userExists'}" th:text="'Ten login istnieje już w bazie!'"></p></small>
 
                         </div>
                         <div th:class="${#fields.hasErrors('password')?'form-group has-error':'form group'}">
@@ -54,10 +54,10 @@
                             <input class="form-control"  th:field="*{password}" placeholder="password" id="password" name="password" type="password" value="">
                             <small> <p class="text-danger text-right" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p></small>
                         </div>
-                        <div th:class="${passwordsMatch==false?'form-group has-error':'form group'}">
+                        <div th:class="${registerError=='passwordsError'?'form-group has-error':'form group'}">
                             <label for="password2" class=control-label > Powtórz hasło: </label>
                             <input class="form-control"  th:field="*{password2}" placeholder="password2" id="password2" name="password2" type="password" value="">
-                            <small> <p class="text-danger text-right" th:if="${passwordsMatch==false}"> Hasła są różne</p></small>
+                            <small> <p class="text-danger text-right" th:if="${registerError=='passwordsError'}"> Hasła są różne</p></small>
                         </div>
                         <br/>
                         <div><input type="submit" class="btn btn-lg btn-success btn-block" value="Zarejestruj"></div>
