--- a/src/main/resources/templates/Fragments/Menus.html
+++ b/src/main/resources/templates/Fragments/Menus.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +21,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li th:if="${currentUser.login != null}"> <a th:href="@{book/add/}" ><i class="glyphicon glyphicon glyphicon-book"></i> Dodaj ksiażkę </a></li>
+                <li th:if="${currentUser.login != null}"> <a th:href="@{/book/add/}" ><i class="glyphicon glyphicon glyphicon-book"></i> Dodaj ksiażkę </a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i><span th:if="${currentUser.login!=null}" th:text="' ' + ${currentUser.login}"></span></span><b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -49,7 +50,7 @@
                 <li><h2>KATEGORIE: </h2> </li>
                 <hr/>
                 <th:block th:each="category : ${categories}">
-                    <li><a th:text="${category.categoryName}" th:href="@{'/books/' + ${category.categoryId} + '/0'}"></a>
+                    <li><a th:text="${category.categoryName} + ' (' + ${category.numberOfBooks} + ')' " th:href="@{'/books/' + ${category.categoryId} + '/0'}"></a>
                     </li>
                 </th:block>
 
