--- a/src/main/resources/templates/Fragments/Menus.html
+++ b/src/main/resources/templates/Fragments/Menus.html
@@ -50,7 +50,7 @@
                 <li><h2>KATEGORIE: </h2> </li>
                 <hr/>
                 <th:block th:each="category : ${categories}">
-                    <li><a th:text="${category.categoryName} + ' (' + ${category.numberOfBooks} + ')' " th:href="@{'/books/' + ${category.categoryId} + '/0'}"></a>
+                    <li><a th:text="${category.categoryName}" th:href="@{'/books/' + ${category.categoryId} + '/0'}"></a>
                     </li>
                 </th:block>
 
