--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -29,8 +29,7 @@
     <div class="row">
         <div class="col-md-9">
             <div class="panel-body">
-                <div class="jumbotron text-center" th:if="${success==true}"> Książka została dodana! </div>
-                <form th:if="${success!=true}" role="form" enctype="multipart/form-data" action="#" th:method="post" th:object="${newBookForm}">
+                <form role="form" enctype="multipart/form-data" action="#" th:method="post" th:object="${newBookForm}">
                     <fieldset>
                         <div th:class="${#fields.hasErrors('title')?'form-group has-error':'form group'}">
                             <label for="title" class=control-label > Tytuł: </label>
