--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -29,8 +29,9 @@
     <div class="row">
         <div class="col-md-9">
             <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-9">
+                <div class="jumbotron text-center" th:if="${success==true}"> Książka została dodana! </div>
+                <div class="row">
+                        <div class="col-md-12">
                             <h3 th:text="${book.title}"></h3>
                             <h4 th:text="${book.author}"></h4>
                             <p><span>Stron: </span><span th:text="${book.pages}"></span></p>
