--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -44,8 +44,8 @@
                     <div class="row">
 
                         <div class="col-md-9">
-                            <a th:href="@{'/book/' + ${book.id}}"><h3 th:text="${book.title}"></h3></a>
-                            <h4 th:text="${book.author}"></h4>
+                            <h3>Tytuł:  <a th:href="@{'/book/' + ${book.id}}"><span th:text="${book.title}"></span></a></h3>
+                            <h4>Autor: <span th:text="${book.author}"></span></h4>
                             <p><span>Stron: </span><span th:text="${book.pages}"></span></p>
 
                         </div>
