--- a/src/main/resources/templates/passwordChange.html
+++ b/src/main/resources/templates/passwordChange.html
@@ -30,7 +30,7 @@
         <div class="col-md-9">
             <div class="panel-body">
                 <div class="jumbotron text-center" th:if="${result=='changed'}"> Hasło zmienione! </div>
-                <h3 th:text = "${currentUser.login}"></h3>
+                <h3 th:text = "${currentUser}"></h3>
                 <form role="form" enctype="multipart/form-data" th:action="@{/passwordChange}" th:method="post" th:object="${passwordChangeForm}">
                     <div th:class="${#fields.hasErrors('oldPassword')?'form-group has-error':'form group'}">
                         <label for="oldPassword2" class=control-label > Stare hasło: </label>
