--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Add book</title>
+    <title>Dodaj książkę</title>
 
     <!-- Bootstrap core CSS -->
     <link th:href="@{/css/bootstrap.css}" rel="stylesheet">
@@ -17,7 +17,6 @@
 <body>
 <nav th:replace="Fragments/Menus :: top-menu"></nav>
 <div th:replace="Fragments/Menus :: side-menu"></div>
-<!-- Page Content -->
 
 <div class="container col-md-9">
     <div class="row">
@@ -49,7 +48,7 @@
                         <label for="pages" class="control-label" > Kategoria: </label>
                         <select th:field="*{categoryId}" class="form-control">
                             <th:block th:each="category : ${categories}">
-                            <option th:value="${category.categoryId}"> <span th:text="${category.categoryName}"></span></option>
+                            <option th:value="${category.categoryId}" th:text="${category.categoryName}"></option>
                             </th:block>
                         </select>
 
@@ -75,9 +74,9 @@
 </div><!-- /.container -->
 
 <!-- JavaScript -->
-<script th:src="@{js/jquery-1.10.2.js}"></script>
-<script th:src="@{js/bootstrap.js}"></script>
-<script th:src="@{js/modern-business.js}"></script>
+<script th:src="@{/js/jquery-1.10.2.js}"></script>
+<script th:src="@{/js/bootstrap.js}"></script>
+<script th:src="@{/js/modern-business.js}"></script>
 
 </body>
 </html>
