--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
     <div class="row">
         <div class="col-md-9">
             <div class="panel-body">
-                <form role="form" enctype="multipart/form-data" th:action="@{/login}" th:method="post" th:object="${loginForm}">
+                <form role="form" enctype="multipart/form-data" th:action="@{/login-process}" th:method="post" th:object="${loginForm}">
                     <fieldset>
                         <div th:class="${#fields.hasErrors('login')?'form-group has-error':'form group'}">
                             <label for="login" class=control-label > Login: </label>
