--- a/src/main/resources/templates/Fragments/Menus.html
+++ b/src/main/resources/templates/Fragments/Menus.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl-PL" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Title</title>
 </head>
 <body>
@@ -57,7 +57,7 @@
                 <hr/>
 
                 <div>
-                    <form class="form-inline" id="searchForm" th:action="@{'/search'}" method="get">
+                    <form class="form-inline" id="searchForm" th:action="@{'/search'}" accept-charset="utf-8" method="get">
                         <h4>Wyszukiwarka:</h4>
                         <div class="input-group">
                             <input type="text" class="form-control" id="phrase" name="phrase">
