--- a/src/main/resources/templates/Fragments/footer.html
+++ b/src/main/resources/templates/Fragments/footer.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Title</title>
 </head>
 <body>
-    <footer th:fragment="footer">
+<footer th:fragment="footer">
     <div class="row">
         <div class="col-md-9">
             <p>Copyright &copy; Ania Madej 2018</p>
